# AGRI_3D-App

./: .gitignore  README.md  agent_manager_prompt.md  autonomous_farming_guide.md  heart_test.gcode  irrigation_results_1778448087.csv  mamdani_fuzzy_logic_guide.md  pdf_text.txt  pdf_text_130_142.txt  pubspec.yaml  pump_dryrun_fertilizer_1778437751.csv  pump_results_fertilizer_1778249598.csv  pump_results_fertilizer_1778267751.csv  pump_results_water_1778248856.csv  pump_results_water_1778249474.csv  pump_results_water_1778259474.csv  results_XY_1777711792.csv  results_X_1777707860.csv  results_Y_1777710089.csv  results_Z_1778166644.csv  thesis_plant_data.csv  thesis_weather_data.csv
MCU_Firmware/ESP32S3/: ESP32-AGRI3D.ino
MCU_Firmware/GRBL-AGRI3D/: cpu_map.h  grbl_agri3d_full_code.txt  limits.c  relays.c  system.c  tmc_config.c
android/app/: build.gradle.kts
ios/Runner/: Info.plist
lib/: app.dart  main.dart
lib/reference/AI_AGRI3D/: AI_AGRI3D.cpp  AI_AGRI3D.h  CMakeLists.txt
lib/reference/AI_AGRI3D/model-parameters/: model_metadata.h
lib/reference/AI_AGRI3D/tflite-model/: tflite_learn_923987_3_compiled.cpp  tflite_learn_923987_3_compiled.h
linux/: CMakeLists.txt
npk_test_pio/: analyze_data.py  consistency_test_data.csv  platformio.ini  t90_response_time_data.csv
testing_tools/: README.md  analyze_results.py  direct_commander.py  dry_run.py  gen_heart.py  irrigation_logic_simulation.py  pump_calibration.py  pump_tester.py  pump_tester_offline.py  thesis_data_logger.py  thesis_tester.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+118 files in other folders)
